--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@ampproject/toolbox-optimizer": "^2.5.5",
+    "@iktakahiro/markdown-it-katex": "^4.0.0",
     "@saschazar/wasm-avif": "^1.0.0",
     "clean-css": "^4.2.3",
     "concurrently": "^5.2.0",
@@ -56,7 +57,6 @@
     "image-size": "^0.8.3",
     "jimp": "^0.14.0",
     "lru-cache": "^5.1.1",
-    "markdown-it-katex": "^2.0.3",
     "mocha": "^8.1.3",
     "purge-from-html": "^1.0.3",
     "purgecss": "^2.3.0",
