--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ampproject/toolbox-optimizer": "^2.5.5",
     "@iktakahiro/markdown-it-katex": "^4.0.0",
     "@saschazar/wasm-avif": "^1.0.0",
+    "ascii2mathml": "^0.7.1",
     "clean-css": "^4.2.3",
     "concurrently": "^5.2.0",
     "csp-hash-generator": "0.0.3",
@@ -57,6 +58,7 @@
     "image-size": "^0.8.3",
     "jimp": "^0.14.0",
     "lru-cache": "^5.1.1",
+    "markdown-it-math": "^4.1.1",
     "mocha": "^8.1.3",
     "purge-from-html": "^1.0.3",
     "purgecss": "^2.3.0",
