--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-accessible-accordion": "^2.4.5",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
-    "remark-math": "^1.0.5"
+    "remark-math": "^1.0.5",
+    "typeface-inter": "^3.15.0"
   },
   "keywords": [
     "gatsby"
