--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "gatsby": "^2.0.53",
     "gatsby-image": "^2.0.20",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-offline": "^2.0.16",
+    "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.12",
+    "gatsby-remark-autolink-headers": "^2.3.12",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-katex": "^3.0.1",
     "gatsby-remark-prismjs": "^3.1.2",
